webinar4/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: blog.mamtajha-dev.in
    http:
      paths:
      - backend: 
          serviceName: hello-kubernetes-first
          servicePort: 80
